# tg-channel-analyzer

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  group_chat_analysis_design.md  partially_unsupervised.md  writing_guide_partially_unsupervised.md
src/: analysis.rs  backend_config.rs  bot.rs  cache.rs  lib.rs  llm.rs  main.rs  migrations.rs  session_manager.rs  user_manager.rs  user_session.rs  web_scraper.rs
src/handlers/: callback_handler.rs  command_handler.rs  group_handler.rs  mod.rs  payment_handler.rs
src/llm/: analysis_query.rs  mod.rs
src/localization/: messages.rs  mod.rs
src/prompts/: analysis.rs  group_analysis.rs  mod.rs
src/rate_limiters/: telegram.rs
src/utils/: message_formatter.rs  mod.rs
tests/: referral_integration.rs
tests/integration/: mock_bot.rs  mod.rs  referral_tests.rs  test_utils.rs
