[package]
name = "tg-main"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
log = "0.4"
env_logger = "0.10"
reqwest = { version = "0.11", features = ["json"] }
grammers-client = "0.7"
grammers-session = "0.7"
gemini-rs = "2.0.0"
regex = "1.0"
clap = { version = "4.0", features = ["derive"] }
teloxide = { version = "0.13", features = ["macros"] }
tokio-stream = "0.1"
fastrand = "2.0"
tokio-postgres = { version = "0.7", features = ["with-serde_json-1"] }
deadpool-postgres = "0.14"
dotenvy = "0.15"
tokio-postgres-rustls = "0.12"
rustls = { version = "0.23", default-features = false, features = ["std", "tls12", "aws_lc_rs"] }
webpki-roots = "0.26"
